# AutoSubs

./: README.md  pyproject.toml
src/autosubs/: cli.py  srt.py  transcribe.py
