[project]
name = "autosubs-whisper"
dynamic = ["version"]
description = "Automatic subtitle (.srt) generator CLI using local Whisper speech-to-text"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "nico", email = "nick.zup@gmail.com" }]
keywords = ["subtitles", "srt", "whisper", "transcription", "speech-to-text", "cli"]
dependencies = ["faster-whisper>=1.1.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
autosubs = "autosubs.cli:main"

[project.urls]
Homepage = "https://github.com/Rage997/AutoSubs"
Repository = "https://github.com/Rage997/AutoSubs"
Issues = "https://github.com/Rage997/AutoSubs/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/autosubs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/autosubs"]
